# uts-32555-software-development

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  classes.mmd  import_script.py  makefile  packages.mmd  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
doc/: 32555_FSD_Assignment1_CaseStudy.docx  class_snapshot.mmd  classes.mmd  packages.mmd
doc/code-present/: framwork.excalidraw  index.md
doc/code-present/export/: index.html
doc/defination/: actors.md  class_diagram.md  pdf_description.md
doc/use_case/: 01_normal_case.wsd  01_normal_csae.mdx
yummy_pizza_api_service/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
yummy_pizza_api_service/db/: base.py  config.py  utils.py
yummy_pizza_api_service/db/dao/: dummy_dao.py  order_dao.py  product_dao.py
yummy_pizza_api_service/db/dummy_class/: order.py  order_product.py  product.py  product_option.py  table_appointment.py  transaction.py
yummy_pizza_api_service/db/migrations/: env.py
yummy_pizza_api_service/db/models/: __init__.py  base_model.py  dummy_model.py  order_model.py  order_product_model.py  order_product_option_model.py  product_model.py  product_option_model.py  receipt_model.py  table_appointment_model.py  transaction_model.py
yummy_pizza_api_service/services/: __init__.py
yummy_pizza_api_service/services/redis/: get_request.py  lifetime.py
yummy_pizza_api_service/tests/: __init__.py  import_data.json  test_dummy.py  test_order.py  test_product.py
yummy_pizza_api_service/utils/: datetime_str.py  merge.py
yummy_pizza_api_service/web/: __init__.py  application.py  lifetime.py
yummy_pizza_api_service/web/api/: based.py  router.py
yummy_pizza_api_service/web/gql/: __init__.py  context.py  router.py
yummy_pizza_app/yummy-pizza-order/: package.json  pnpm-lock.yaml  vite.config.js
yummy_pizza_app/yummy-pizza-order/src/: App.jsx  dialog-appointment.jsx  tab.jsx  (+10 more)
yummy_pizza_app/yummy-pizza-order/src-tauri/: Cargo.toml  tauri.conf.json
(+43 files in other folders)
